src/objects/DMAPP__Insight_Smart_Node__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__CollaborationGroupId__c</fullName>
        <label>CollaborationGroupId</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Smart_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Dealmaker ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Description__c</fullName>
        <label>Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Namespace__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Insight Namespace</label>
        <referenceTo>DMAPP__Insight_Namespace__c</referenceTo>
        <relationshipLabel>Smart Nodes</relationshipLabel>
        <relationshipName>Smart_Nodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DMAPP__Promote_Sales_Tool__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Promote Sales Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Segmentation__c</fullName>
        <label>Segmentation</label>
        <picklist>
            <picklistValues>
                <fullName>Please configure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Tags__c</fullName>
        <label>Tags</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pressure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstacle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__eMail__c</fullName>
        <label>eMail</label>
        <type>Email</type>
    </fields>
    <label>Smart Element</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__Type__c</columns>
        <columns>DMAPP__Namespace__c</columns>
        <columns>DMAPP__Description__c</columns>
        <columns>DMAPP__Tags__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DMAPP__Goals</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__Description__c</columns>
        <columns>DMAPP__Tags__c</columns>
        <columns>DMAPP__Type__c</columns>
        <columns>DMAPP__Namespace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DMAPP__Type__c</field>
            <operation>equals</operation>
            <value>Goal</value>
        </filters>
        <label>1. Goals</label>
    </listViews>
    <listViews>
        <fullName>DMAPP__Initiatives</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__Description__c</columns>
        <columns>DMAPP__Tags__c</columns>
        <columns>DMAPP__Type__c</columns>
        <columns>DMAPP__Namespace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DMAPP__Type__c</field>
            <operation>equals</operation>
            <value>Initiative</value>
        </filters>
        <label>3. Initiatives</label>
    </listViews>
    <listViews>
        <fullName>DMAPP__Obstacles</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__Description__c</columns>
        <columns>DMAPP__Tags__c</columns>
        <columns>DMAPP__Type__c</columns>
        <columns>DMAPP__Namespace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DMAPP__Type__c</field>
            <operation>equals</operation>
            <value>Obstacle</value>
        </filters>
        <label>4. Obstacles</label>
    </listViews>
    <listViews>
        <fullName>DMAPP__Pressures</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__Description__c</columns>
        <columns>DMAPP__Tags__c</columns>
        <columns>DMAPP__Type__c</columns>
        <columns>DMAPP__Namespace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DMAPP__Type__c</field>
            <operation>equals</operation>
            <value>Pressure</value>
        </filters>
        <label>2. Pressures</label>
    </listViews>
    <listViews>
        <fullName>DMAPP__Solutions</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__Description__c</columns>
        <columns>DMAPP__Tags__c</columns>
        <columns>DMAPP__Promote_Sales_Tool__c</columns>
        <columns>DMAPP__Type__c</columns>
        <columns>DMAPP__Namespace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DMAPP__Type__c</field>
            <operation>equals</operation>
            <value>Solution</value>
        </filters>
        <label>5. Solutions</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Smart Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DMAPP__Prevent_Field_Update</fullName>
        <active>true</active>
        <description>Prevents users updating the Field</description>
        <errorConditionFormula>ISCHANGED(DMAPP__DealmakerID__c)</errorConditionFormula>
        <errorDisplayField>DMAPP__DealmakerID__c</errorDisplayField>
        <errorMessage>The Dealmaker ID field cannot be updated after creation</errorMessage>
    </validationRules>
</CustomObject>